--- a/services/index.de.html
+++ b/services/index.de.html
@@ -70,14 +70,15 @@ menu_services: yes
 			<div>Referenzbeispiele:</div>
 			<a href="http://energyhack.de/">Energyhack-Reihe</a> mit Stromnetz Berlin und der Senatsverwaltung für Wirtschaft, Technologie und Forschung,
 			<a href="https://handbuch.tib.eu/w/images/2/2c/DH-Handbuch.pdf">Book Sprint</a> zu digitalen Geisteswissenschaften,
-			<a href="http://codefor.de/">Digital Refugee Labs</a> mit der Bundeszentrale für Politische Bildung
+			<a href="http://codefor.de/">Digital Refugee Labs</a> mit der Bundeszentrale für Politische Bildung,
+			<a href="http://offenerhaushalt.de/">Umsetzungen von Haushaltsvisualisierungen</a> für Kommunen
 		</div>
 	</div>
 </div>
 
 <div class="row services-item">
 	<div class="col-md-offset-1 col-md-10 services-col">
-		<div class="title">Forschungen und Studien:</div>
+		<div class="title">Forschung und Studien:</div>
 		Wir forschen und recherchieren zu Aspekten der digitalen Gesellschaft und offenen Daten, entwerfen Szenarien zum Umgang mit datengestützten Anwendungen
 		und analysieren Best Practices auf lokaler und internationaler Ebene.<br/>
 		<div class="reference">
