Fix fix Rechtschreibung

--- a/services/index.de.html
+++ b/services/index.de.html
@@ -39,7 +39,7 @@ menu_services: yes
 	<div class="col-md-offset-1 col-md-10 services-col">
 		<div class="title">Datenschule:</div>
 		Unser Bildungsangebot zu Daten und Technologien richtet sich an gemeinnützige Organisationen,
-		die Ihre Datenskills verbessern und mittels datengestützten Projekten gesellschaftlichen Wandel positiv gestalten möchten.<br/>
+		die ihre Datenskills verbessern und mittels datengestützten Projekten gesellschaftlichen Wandel positiv gestalten möchten.<br/>
 		Mehr dazu unter: <a href="https://datenschule.de/">datenschule.de</a>
 	</div>
 </div>
