--- a/vorstand/index.de.html
+++ b/vorstand/index.de.html
@@ -18,6 +18,6 @@ menu_vorstand: yes
 
 <div class="row person">
   <div class="col-md-12 text-center">
-    Ehemalige Mitglieder des Vorstands sind <a href="/vorstand_alumni">hier</a> zu finden.
+    Ehemalige Mitglieder des Vorstands sind <a href="/vorstand/alumni">hier</a> zu finden.
   </div>
 </div>
