--- a/vorstand/index.en.html
+++ b/vorstand/index.en.html
@@ -19,6 +19,6 @@ menu_vorstand: yes
 
 <div class="row person">
 	<div class="col-md-12 text-center">
-		Find past board members <a href="/en/vorstand_alumni">here</a>.
+		Find past board members <a href="/en/vorstand/alumni">here</a>.
 	</div>
 </div>
