--- a/termine/index.html
+++ b/termine/index.html
@@ -1,32 +1,41 @@
 ---
-layout: page
+layout: default
 title: Termine
 menu_termine: yes
 ---
+<div class="lurking-header">
+	<h1>Termine</h1>
+	<p class="text-center">
+		<!--<a href="https://www.google.com/calendar/ical/okfn.de_jcb2bir16010snrta90clnthrg@group.calendar.google.com/public/basic.ics"><i class="icon-rss-squared"></i> Termine-Feed abonnieren (.ics)</a><br/>-->
+	</p>
+</div>
 
-{% for event in site.data.calendar.vcalendar[0].vevent %}
-<div class="row row-flex row-flex-wrap">
-	<div class="flex-col col-md-4 col-sm-6 col-xs-12 termin-box">
-		<div>
-			<h4>{{event.summary}}</h4>
-			<p>When: {{event.dtstart | date: "%d.%m.%Y"}}</p>
-			<p>Where: {{event.location | replace: '\,', ','}}</p>
-			{% if event.url %}
-			<p>Info: <a href="{{event.url}}">Link</a></p>
-			{% endif %}
+<!--{{site.data.calendar | jsonify}}-->
+<div class="termine">
+	{% assign events = site.data.calendar | sort: 'dtstart' %}
+	{% for event in events %}
+	<div class="termin-box">
+		<div class="termin-box-infos">
+			<div class="termin-box-title">{{event.summary}}</div>
+			{% if event.description != blank %}
 			<p>{{event.description}}</p>
-			<!--{{event | jsonify}}-->
+			{% endif %}
+			{% if event.location != blank %}
+			<p><i class="icon-location"></i> {{event.location | replace: '\,', ','}}</p>
+			{% endif %}
+			{% if event.url != blank %}
+			<p><i class="icon-info-circled"></i> <a href="{{event.url}}">Mehr Info</a></p>
+			{% endif %}
+			{% assign d = event.dtstart | jsonify %}
+			{% if d.size > 12 %}<p><i class="icon-clock"></i> {{event.dtstart | date: "%R"}}</p>{% endif %}
+		</div>
+		<div class="termin-box-date">
+			<p>
+				<span class="termin-box-date-dl">{% assign d = event.dtstart | date: "%a" %}{% case d %}{% when 'Mon' %}Montag{% when 'Tue' %}Dienstag{% when 'Wed' %}Mittwoch{% when 'Thu' %}Donnerstag{% when 'Fri' %}Freitag{% when 'Sat' %}Samstag{% when 'Sun' %}Sonntag{% endcase %}</span>
+				<span class="termin-box-date-d">{{ event.dtstart | date: "%-d" }}</span>
+				<span class="termin-box-date-ml">{% assign m = event.dtstart | date: "%-m" %}{% case m %}{% when '1' %}Januar{% when '2' %}Februar{% when '3' %}M&auml;rz{% when '4' %}April{% when '5' %}Mai{% when '6' %}Juni{% when '7' %}Juli{% when '8' %}August{% when '9' %}September{% when '10' %}Oktober{% when '11' %}November{% when '12' %}Dezember{% endcase %}</span>
+				<span lass="termin-box-date-y">{{ event.dtstart | date: "%Y" }}</span>
 		</div>
 	</div>
+	{% endfor %}
 </div>
-{% endfor %}
-
-<hr>
-
-<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;height=600&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=okfn.de_jcb2bir16010snrta90clnthrg%40group.calendar.google.com&amp;color=%235229A3&amp;ctz=Europe%2FBerlin"
-		style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-<!--
-
-https://www.google.com/calendar/ical/okfn.de_jcb2bir16010snrta90clnthrg@group.calendar.google.com/public/basic.ics
-
--->
