Add donate campaign gif

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ description: Offenes Wissen für die digitale Gesellschaft
 			</div>
 		</div>
 		<div class="row">
+			<img class="col-md-5 col-md-offset-1" style="max-width: 100%" src="{{ site.staticurl }}images/campaign/okf_adjectives.gif" alt="unabhängig, überparteilich, gemeinnützig"/>
+		</div>
+		<div class="row">
 			<div class="col-sm-7 col-sm-offset-5 col-xs-12">
 				<p>{% t start.SpendenText %}</p>
 				<p>
