--- a/impressum/index.html
+++ b/impressum/index.html
@@ -49,7 +49,7 @@ background: backgrounds/services.jpg
 	</dl>
 	<dl>
 		<dt>{% t impressum.Webseitendesign %}:</dt>
-		<dd><a href="http://nadinestammen.de/">Nadine Stammen</a>, Felix Becker, <a href="http://stefanwehrmeyer.com/">Stefan Wehrmeyer</a>, Andrej Sandorf</dd>
+		<dd><a href="http://nadinestammen.de/">Nadine Stammen</a>, <a href="https://felixbecker.me/">Felix Becker</a>, <a href="http://stefanwehrmeyer.com/">Stefan Wehrmeyer</a>, Andrej Sandorf</dd>
 	</dl>
 	<dl>
 		<dt>{% t impressum.Tech %}:</dt>
