news section for landing page (en)

--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@ description: Offenes Wissen für die digitale Gesellschaft
 	</div>
 </div>
 
+{% if page.lang == 'en' %}
+	<div class="fond__blue">
+		<div class="container padded-row">
+			<div class="row">
+				<div class="col-md-12">
+					<h2>News News News</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-8 col-sm-offset-2 col-xs-12">
+					<p>Exciting news from Open Knowledge Foundation Germany: together with <a href="http://algorithmwatch.org">AlgorithmWatch</a> we launched our first mydata project <a href="https://www.startnext.com/openschufa"> OpenSCHUFA</a>, which aims to reconstruct the Schufa (German credit scoring) algorithm with „reverse engineering“. The campaign generated Germany-wide media attention, thousands of personal data requests and over €30.000 in crowdunding.<br>
+					In addition, we opened the fourth round of our <a href="https://prototypefund.de">Prototype Fund</a> for applications. With the theme 'Power to the users – more sovereignty, security and trust through open source tools', software developers, hackers, and creatives in Germany can apply for funding until 31 March.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+{% endif%}
+
 <div class="light-section">
 	<div class="container padded-row">
 		<div class="row">
@@ -60,6 +78,7 @@ description: Offenes Wissen für die digitale Gesellschaft
 		</div>
 	</div>
 </div>
+
 
 <div class="container padded-row">
 	<div class="row">
