--- a/vorstand/alumni/index.de.html
+++ b/vorstand/alumni/index.de.html
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: Vorstand - Ehemalige
+title: Vorstand & Team - Ehemalige
 description: ''
 background: backgrounds/background.jpg
 menu_vorstand: yes
 ---
 {% assign board_alumni = site.data.team | where:"board_alumni",1 | sort: "name" %}
 <div class="lurking-header">
-  <h1>Ehemalige Mitglieder des Vorstands</h1>
-  <p class="text-center">Die folgenden Personen sind ausgeschiedene Mitglieder aus dem Vorstand:</p>
+  <h1>Ehemalige Mitglieder des Vorstands und des Teams</h1>
+  <p class="text-center">Die folgenden Personen sind ausgeschiedene Mitglieder aus dem Vorstand und dem Team:</p>
 </div>
 {% for person in board_alumni %}
 {% assign order=forloop.index0|modulo:2 %}
