--- a/team/index.de.html
+++ b/team/index.de.html
@@ -17,3 +17,10 @@ menu_team: yes
   {% assign order=forloop.index0|modulo:2 %}
   {% include person.html person=person order=order %}
 {% endfor %}
+
+
+<div class="row person">
+  <div class="col-md-12 text-center">
+    Ehemalige Mitglieder des Teams sind <a href="/vorstand/alumni">hier</a> zu finden.
+  </div>
+</div>
