--- a/impressum/index.html
+++ b/impressum/index.html
@@ -77,7 +77,7 @@ background: backgrounds/services.jpg
 		Inhalte dieser Seite unter der Creative Commons Namensnennung 3.0 DE Lizenz. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als
 		solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend
 		entfernen.</p>
-	<h2>Datenschutzerklärung</h2>
+	<h2 id="datenschutzerklaerung">Datenschutzerklärung</h2>
 	<h3>I. Datenerhebung und Datenverarbeitung</h3>
 	<p>Die Sicherheit Ihrer Daten hat bei uns höchste Priorität. Wir ergreifen jede nur mögliche Maßnahme, um Ihre persönlichen Daten vor unbefugtem Zugriff zu schützen. Sämtliche Anforderungen des Bundesdatenschutzgesetzes (BDSG),
 		Telemediengesetzes (TMG) sowie alle weiteren datenschutzrechtlichen Vorschriften werden von uns eingehalten. Sie können unsere Seite besuchen, ohne Angaben zu Ihrer Person zu machen. Wir speichern dann lediglich Zugriffsdaten ohne
