--- a/services/index.de.html
+++ b/services/index.de.html
@@ -132,7 +132,7 @@ menu_services: yes
 	<div class="col-md-12 services-col">
 		<h2>Kontakt</h2>
 		<p>
-			Haben Sie ein Anliegen oder möchten mehr über unsere Arbeit erfahren? Wir freuen uns auf Ihre Kontaktaufnahme: <a href="mailto:info@okfn.de">services@okfn.de</a>
+			Haben Sie ein Anliegen oder möchten mehr über unsere Arbeit erfahren? Wir freuen uns auf Ihre Kontaktaufnahme: <a href="mailto:info@okfn.de">info@okfn.de</a>
 		</p>
 	</div>
 </div>
